[package]
name = "adventofcode"
version = "0.1.0"
authors = ["Thomas <denhollander.thomas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto_enums = "0.7.1"
nom = "5"
itertools = "0.8.2"
thiserror = "1"
aoc-types = { path = "../aoc-types" }
permutohedron = "0.2.4"

[dev-dependencies]
anyhow = "1"
