[package]
name = "adventofcode"
version = "0.1.0"
authors = ["Thomas <denhollander.thomas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto_enums = "0.7.1"
nom = "5"
itertools = "0.8.2"
thiserror = "1"
aoc-types = { path = "../aoc-types" }
permutohedron = "0.2.4"
async-trait = "0.1.21"
futures-await-test = "0.3.0"
futures = "0.3.1"
scan_fmt = "0.2.4"
anyhow = "1"
arrayvec = "0.5.1"
pest = "*"
